# autonomous-research-control-plane

./: .gitignore  IMPLEMENTATION_PLAN.md  MULTI_AGENT_CONTROL_PLANE_MVP.md  MULTI_AGENT_CONTROL_PLANE_PLAN.md  README.md  pyproject.toml  research_design.md
data/domain_a/: tiny_math_eval.jsonl
docs/: ACTIVE_GOAL.md  AGENT_HANDOFF.md  COMPLETION_AUDIT.md  ELP_ATLAS_SKELETON.md  EXTENSION_SEAMS.md  README.md
docs/superpowers/plans/: 2026-05-19-scientific-validity-hardening-and-result-note.md  2026-05-19-scientific-validity-mvp.md  2026-05-19-verification-aware-brain-refinement.md  2026-05-19-verifier-action-aware-brain-planning.md  2026-05-21-elp-atlas-implementation-campaign.md  2026-05-21-elp-atlas-phase1-program-skeleton.md
src/controlplane/: __init__.py  cli.py
src/elp_atlas/: __init__.py
tests/: test_campaign_loop.py  test_campaign_state.py  test_cli.py  test_decomposer.py  test_elp_atlas_challenger_update.py  test_elp_atlas_cheap_elp.py  test_elp_atlas_config.py  test_elp_atlas_domain_a_dataset.py  test_elp_atlas_domain_a_dataset_run.py  test_elp_atlas_domain_a_eval.py  test_elp_atlas_domain_b_eval.py  test_elp_atlas_end_to_end_round.py  test_elp_atlas_generation_filtering.py  test_elp_atlas_imports.py  test_elp_atlas_probe.py  test_elp_atlas_regression_memory.py  test_elp_atlas_schemas.py  test_elp_atlas_skill_abstraction.py  test_elp_atlas_solver_training.py  test_elp_atlas_state.py  test_governor.py  test_iteration_loop.py  test_launchers.py  test_objective_evolver.py  test_planner.py  test_router.py  test_schemas.py  test_task_intent.py  test_verifier.py
(+64 files in other folders)
