[project]
name = "autonomous-research-control-plane"
version = "0.1.0"
description = "Greenfield multi-agent control plane for autonomous research campaigns"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
controlplane = "controlplane.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
